@@ -1,3 +1,8 @@
+2008-07-20 [colin]	0.9.1cvs2
+
+	* src/poppler_viewer.c
+		Undeprecate tooltips
+
 2008-04-18 [colin]	0.9.1cvs1
 
 	* src/poppler_viewer.c
